# Jekyll-noDev

./: Jekyll-noDev.gemspec  LICENSE.txt  README.md  _config.yaml  _config.yml  index.html
_data/: config.json  info.json
_includes/: fader-footer.html  fader-nav-home.html  fader-nav.html  fix-footer.html  fix-navbar.html  footer.html  header.html
_layouts/: home.html  post.html
_posts/: 2019-07-21-CertificationJAVASUN.md  2019-07-21-DataCollectorDroneTSP.md  2019-07-21-DatabasePopulateSearchIR.md  2019-07-21-EventDrivenSimulation.md  2019-07-21-MaximumFlowFordFulkerson.md  2019-07-21-MinimumSpanningTree.md  2019-07-21-OpenMPOpenMPIStarCount.md  2019-07-21-SIMPLESBisonFlex.md  2019-07-21-ScheduelSchool-CPLEX.md  2019-07-21-ShortestPathBellmanFordDijkstra.md  2019-07-21-TSPSolver-CPLEX.md  2019-07-21-lel copy 15.md  2019-07-21-sadasd copy 12.md  2019-07-21-simples.md  2019-07-22-DataScienceGameFinalist.md  2019-07-22-data-science-game.md
_puppies/: 2019-07-21-lel.md
_sass/: fader.scss  home.scss  styles.scss
pages/: about.html  projects.html
projects/: .netbeans_automatic_build.txt  .netbeans_update_resources.txt
projects/academic/ImageProcessing/Contour/: .cproject  .project  CMakeLists.txt  contorno.txt
projects/academic/ImageProcessing/Contour/buil/: CMakeCache.txt  Makefile  build.ninja  cmake_install.cmake  rules.ninja
projects/academic/ImageProcessing/Contour/includes/: contour_check.h  converter.h  imagelib.h  logger.h  tracker.h
projects/academic/ImageProcessing/Contour/src/: contour_check.c  converter.c  imagelib.c  logger.c  main.c  tracker.c
(+283 files in other folders)
